--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -11,10 +11,117 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/14273d579a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <header>
+        <nav class="bg-light">
+            <div class="container">
+                <div class="bg-secondary py-4"></div>
+            </div>
+        </nav>
+    </header>
 
+    <main>
+        <section class="my-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h1>Je suis John Doe Développeur et Designer Web</h1>
+                        <h2>Bienvenue dans mon univers créatif</h2>
+                        <button>Mon expertise Web</button>
+                    </div>
+                    <div class="col">
+                        <img src="./img/portrait.jpg" alt="Photo de John Doe" class="w-100">
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5 bg-light">
+            <div class="container">
+                <h2>Mon expertise</h2>
+                <h3>Développement web et design</h3>
+                <div class="row gy-4 mt-5">
+                    <div class="col-12 col-md-7">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                    <div class="col-12 offset-md-1 col-md-4">
+                        <img src="./img/code.jpg" alt="écran montrant du code php" width="100%">
+                    </div>
+                </div>
+                <div class="row gy-4 mt-5">
+                    <div class="col-12 col-md-4">
+                        <img src="./img/design.jpg" alt="écran montrant des designs" width="100%">
+                    </div>
+                    <div class="col-12 offset-md-1 col-md-7">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5">
+            <div class="container">
+                <h2>Mon portfolio</h2>
+                <h3>Projets perso et pro</h3>
+                <div class="row gy-4 mt-4">
+                    <div class="col-3">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                    <div class="col-3">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="py-5 bg-light">
+            <div class="container">
+                <h2>Un projet de création web ?</h2>
+                <h3>Allons en discuter autour d'un café</h3>
+
+                <div class="row gy-4 mt-5">
+                    <div class="col-12 col-md-5">
+                        <img src="./img/grab-a-coffee.jpg" alt="tasse de café" width="100%">
+                    </div>
+                    <div class="col-12 offset-md-1 col-md-6">
+                        <div class="bg-secondary h-100 w-100 py-5">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="border-top">
+        <div class="container py-5">
+            <div class="row gy-4">
+                <div class="col-12 col-md-4">
+                    <div class="bg-secondary py-5"></div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="bg-secondary py-5"></div>
+                </div>
+                <div class="col-12 col-md-4">
+                    <div class="bg-secondary py-5"></div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <!-- Script js -->
