--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <div class="col-12 col-md-6">
                         <h1>Je suis John Doe Développeur et Designer Web</h1>
                         <h2>Bienvenue dans mon univers créatif</h2>
-                        <button>Mon expertise Web</button>
+                        <button class="btn btn-primary" href="#" role="button">Mon expertise Web</button>
                     </div>
                     <div class="col-12 col-md-6">
                         <img src="./img/portrait.jpg" alt="Photo de John Doe" class="w-100">
