--- a/index.html
+++ b/index.html
@@ -16,10 +16,24 @@
 </head>
 
 <body>
-    <header>
-        <nav class="bg-light">
+    <header class="py-4">
+        <nav class="navbar navbar-expand-md bg-light navbar-light fixed-top">
             <div class="container">
-                <div class="bg-secondary py-4"></div>
+                <a href="./index.html" class="navbar-brand text-uppercase fw-bold">
+                    <span class="bg-primary bg-gradient p-1 rounded-3 text-light">John</span> Doe
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item active"><a href="#johndoe" class="nav-link">Qui suis-je ?</a></li>
+                        <li class="nav-item"><a href="#expertise" class="nav-link">Expertises</a></li>
+                        <li class="nav-item"><a href="#portfolio" class="nav-link">Portfolio</a></li>
+                        <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+                    </ul>
+                </div>
             </div>
         </nav>
     </header>
