--- a/index.html
+++ b/index.html
@@ -60,22 +60,109 @@
                 <h3 class="fw-light fs-5">Développement web et design</h3>
                 <div class="row gy-4 mt-4">
                     <div class="col-12 col-md-7">
-                        <div class="bg-secondary h-100 w-100 py-5">
+
+                        <!-- Progress bar -->
+                        <div class="bg-white p-3">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-html5 fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">HTML5</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
+                                            aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
+
+                        <div class="bg-white p-3">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-css3-alt fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">CSS3</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-100" role="progressbar" aria-valuenow="100"
+                                            aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-white p-3">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-js fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">JS</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
+                                            aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-white p-3">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-php fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">PHP</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
+                                            aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="bg-white p-3">
+                            <div class="row align-items-center">
+                                <div class="col-5 col-sm-4 col-md-3 col-xl-2">
+                                    <div class="d-flex align-items-center">
+                                        <i class="fab fa-sass fa-2x me-3 text-primary"></i>
+                                        <p class="fw-bold m-0">SASS</p>
+                                    </div>
+                                </div>
+                                <div class="col">
+                                    <div class="progress">
+                                        <div class="progress-bar w-50" role="progressbar" aria-valuenow="40"
+                                            aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                     <div class="col-12 offset-md-1 col-md-4">
                         <img src="./img/code.jpg" alt="écran montrant du code php" width="100%">
                     </div>
                 </div>
-                <div class="row gy-4 mt-5">
-                    <div class="col-12 col-md-4">
-                        <img src="./img/design.jpg" alt="écran montrant des designs" width="100%">
-                    </div>
-                    <div class="col-12 offset-md-1 col-md-7">
-                        <div class="bg-secondary h-100 w-100 py-5">
-                        </div>
+            </div>
+
+            <div class="row gy-4 mt-5">
+                <div class="col-12 col-md-4">
+                    <img src="./img/design.jpg" alt="écran montrant des designs" width="100%">
+                </div>
+                <div class="col-12 offset-md-1 col-md-7">
+                    <div class="bg-secondary h-100 w-100 py-5">
                     </div>
                 </div>
+            </div>
             </div>
         </section>
 
