--- a/index.html
+++ b/index.html
@@ -179,7 +179,20 @@
                                 <h5 class="card-title">Projet 1</h5>
                                 <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque,
                                     voluptatem?</p>
-                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                                <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#infoProjet1"
+                                    aria-controls="infoProjet1">En
+                                    savoir plus</a>
+                                <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoProjet1"
+                                    aria-labelledby="titelProjet1">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="titelProjet1">Projet 1</h5>
+                                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        ...
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -190,7 +203,20 @@
                                 <h5 class="card-title">Projet 2</h5>
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat,
                                     libero?</p>
-                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                                <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#infoProjet2"
+                                    aria-controls="infoProjet2">En
+                                    savoir plus</a>
+                                <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoProjet2"
+                                    aria-labelledby="titelProjet2">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="titelProjet2">Projet 2</h5>
+                                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        ...
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -201,7 +227,20 @@
                                 <h5 class="card-title">Projet 3</h5>
                                 <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quisquam,
                                     ducimus.</p>
-                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                                <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#infoProjet3"
+                                    aria-controls="infoProjet3">En
+                                    savoir plus</a>
+                                <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoProjet3"
+                                    aria-labelledby="titelProjet3">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="titelProjet3">Projet 3</h5>
+                                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        ...
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -212,7 +251,20 @@
                                 <h5 class="card-title">Projet 4</h5>
                                 <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat,
                                     perferendis!</p>
-                                <a href="#" class="btn btn-primary">En savoir plus</a>
+                                <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#infoProjet4"
+                                    aria-controls="infoProjet4">En
+                                    savoir plus</a>
+                                <div class="offcanvas offcanvas-bottom h-100" tabindex="-1" id="infoProjet4"
+                                    aria-labelledby="titelProjet4">
+                                    <div class="offcanvas-header">
+                                        <h5 class="offcanvas-title" id="titelProjet4">Projet 4</h5>
+                                        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                                            aria-label="Close"></button>
+                                    </div>
+                                    <div class="offcanvas-body">
+                                        ...
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
