--- a/index.html
+++ b/index.html
@@ -190,7 +190,36 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="offcanvas-body">
-                                        ...
+                                        <div id="carouselProject1" class="carousel slide shadow h-100"
+                                            data-bs-ride="carousel" data-bs-touch="true">
+                                            <div class="carousel-inner h-100">
+                                                <div class="carousel-item active h-100" data-bs-interval="10000">
+                                                    <img src="https://picsum.photos/1920/1080?random=1"
+                                                        class="d-block w-100" alt="Image slide 1">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 1</h5>
+                                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Hic, eius.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img src="..." class="d-block w-100" alt="...">
+                                                </div>
+                                                <div class="carousel-item">
+                                                    <img src="..." class="d-block w-100" alt="...">
+                                                </div>
+                                            </div>
+                                            <button class="carousel-control-prev" type="button"
+                                                data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Previous</span>
+                                            </button>
+                                            <button class="carousel-control-next" type="button"
+                                                data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Next</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
