--- a/index.html
+++ b/index.html
@@ -202,20 +202,32 @@
                                                             Hic, eius.</p>
                                                     </div>
                                                 </div>
-                                                <div class="carousel-item">
-                                                    <img src="..." class="d-block w-100" alt="...">
+                                                <div class="carousel-item h-100" data-bs-interval="2000">
+                                                    <img src="https://picsum.photos/1920/1080?random=2"
+                                                        class="d-block w-100" alt="Image slide 2">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 2</h5>
+                                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                                            Hic, iure?</p>
+                                                    </div>
                                                 </div>
-                                                <div class="carousel-item">
-                                                    <img src="..." class="d-block w-100" alt="...">
+                                                <div class="carousel-item h-100">
+                                                    <img src="https://picsum.photos/1920/1080?random=3"
+                                                        class="d-block w-100" alt="Image slide 3">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 3</h5>
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Harum, dolore.</p>
+                                                    </div>
                                                 </div>
                                             </div>
                                             <button class="carousel-control-prev" type="button"
-                                                data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                                                data-bs-target="#carouselProject1" data-bs-slide="prev">
                                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                                 <span class="visually-hidden">Previous</span>
                                             </button>
                                             <button class="carousel-control-next" type="button"
-                                                data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                                                data-bs-target="#carouselProject1" data-bs-slide="next">
                                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                                 <span class="visually-hidden">Next</span>
                                             </button>
@@ -243,7 +255,48 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="offcanvas-body">
-                                        ...
+                                        <div id="carouselProject2" class="carousel slide shadow h-100"
+                                            data-bs-ride="carousel" data-bs-touch="true">
+                                            <div class="carousel-inner h-100">
+                                                <div class="carousel-item active h-100" data-bs-interval="10000">
+                                                    <img src="https://picsum.photos/1920/1080?random=4"
+                                                        class="d-block w-100" alt="Image slide 1">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 1</h5>
+                                                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                                                            Officiis, voluptatum.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item h-100" data-bs-interval="2000">
+                                                    <img src="https://picsum.photos/1920/1080?random=5"
+                                                        class="d-block w-100" alt="Image slide 2">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 2</h5>
+                                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Sed, fugiat.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item h-100">
+                                                    <img src="https://picsum.photos/1920/1080?random=6"
+                                                        class="d-block w-100" alt="Image slide 3">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 3</h5>
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Saepe, labore?</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button class="carousel-control-prev" type="button"
+                                                data-bs-target="#carouselProject2" data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Previous</span>
+                                            </button>
+                                            <button class="carousel-control-next" type="button"
+                                                data-bs-target="#carouselProject2" data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Next</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -267,7 +320,48 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="offcanvas-body">
-                                        ...
+                                        <div id="carouselProject3" class="carousel slide shadow h-100"
+                                            data-bs-ride="carousel" data-bs-touch="true">
+                                            <div class="carousel-inner h-100">
+                                                <div class="carousel-item active h-100" data-bs-interval="10000">
+                                                    <img src="https://picsum.photos/1920/1080?random=7"
+                                                        class="d-block w-100" alt="Image slide 1">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 1</h5>
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Fugiat, aspernatur.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item h-100" data-bs-interval="2000">
+                                                    <img src="https://picsum.photos/1920/1080?random=8"
+                                                        class="d-block w-100" alt="Image slide 2">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 2</h5>
+                                                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                                            Incidunt, aliquid!</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item h-100">
+                                                    <img src="https://picsum.photos/1920/1080?random=9"
+                                                        class="d-block w-100" alt="Image slide 3">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 3</h5>
+                                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                                            Delectus, architecto!</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button class="carousel-control-prev" type="button"
+                                                data-bs-target="#carouselProject3" data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Previous</span>
+                                            </button>
+                                            <button class="carousel-control-next" type="button"
+                                                data-bs-target="#carouselProject3" data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Next</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -291,7 +385,48 @@
                                             aria-label="Close"></button>
                                     </div>
                                     <div class="offcanvas-body">
-                                        ...
+                                        <div id="carouselProject4" class="carousel slide shadow h-100"
+                                            data-bs-ride="carousel" data-bs-touch="true">
+                                            <div class="carousel-inner h-100">
+                                                <div class="carousel-item active h-100" data-bs-interval="10000">
+                                                    <img src="https://picsum.photos/1920/1080?random=10"
+                                                        class="d-block w-100" alt="Image slide 1">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 1</h5>
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Repudiandae, porro.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item h-100" data-bs-interval="2000">
+                                                    <img src="https://picsum.photos/1920/1080?random=11"
+                                                        class="d-block w-100" alt="Image slide 2">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 2</h5>
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Quisquam, assumenda.</p>
+                                                    </div>
+                                                </div>
+                                                <div class="carousel-item h-100">
+                                                    <img src="https://picsum.photos/1920/1080?random=12"
+                                                        class="d-block w-100" alt="Image slide 3">
+                                                    <div class="carousel-caption d-none d-md-block">
+                                                        <h5>Slide 3</h5>
+                                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                                            Nobis, tempore!</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <button class="carousel-control-prev" type="button"
+                                                data-bs-target="#carouselProject4" data-bs-slide="prev">
+                                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Previous</span>
+                                            </button>
+                                            <button class="carousel-control-next" type="button"
+                                                data-bs-target="#carouselProject4" data-bs-slide="next">
+                                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                                <span class="visually-hidden">Next</span>
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
