--- a/index.html
+++ b/index.html
@@ -483,7 +483,10 @@
                 </div>
                 <div class="col-12 col-md-4 text-md-center">
                     <ul class="list-unstyled mb-0">
-                        <li><a href="#" class="text-decoration-none text-dark">Mentions légales</a></li>
+                        <li>
+                            <a href="#" class="text-decoration-none text-dark" data-bs-toggle="modal"
+                                data-bs-target="#mentionsLegales">Mentions légales</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-12 col-md-4 text-md-end">
@@ -499,13 +502,39 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="mentionsLegales" tabindex="-1" aria-labelledby="exampleModalLabel"
+            aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" modal-dialog-scrollable>
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Mentions légales</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, doloribus. Consequatur id
+                            dolor quia. Numquam expedita, tenetur ipsa incidunt obcaecati voluptatibus rem explicabo
+                            temporibus! Magni obcaecati impedit suscipit officia quam odio ipsum quas dolorem dolor illo
+                            accusamus at exercitationem quibusdam mollitia aspernatur ut, odit rem laudantium quasi
+                            vitae, aliquam fugit sed, dicta consectetur! Molestiae quod voluptates saepe dolore
+                            inventore. Veritatis doloribus molestias laudantium dolor minus dolorem ex incidunt animi
+                            porro corporis labore alias, veniam in commodi excepturi voluptatibus accusamus. Quos aut
+                            voluptatum in pariatur? Doloremque culpa provident, perspiciatis reiciendis ab quisquam
+                            aliquid earum in illo eligendi possimus aspernatur libero. Numquam?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur expedita autem ipsum aut
+                            soluta quisquam deleniti alias mollitia vero debitis labore praesentium maiores quos quaerat
+                            perferendis, sequi consectetur? Magni vel, cumque fugiat quidem praesentium, hic deserunt
+                            eveniet ipsa, nam in neque molestiae necessitatibus debitis fugit eaque iste amet est unde?
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Script js -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
     </footer>
-
-
-    <!-- Script js -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
