--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="progress">
+                                    <div class="progress" data-bs-toggle="tooltip" title="75%">
                                         <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
                                             aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -88,7 +88,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="progress">
+                                    <div class="progress" data-bs-toggle="tooltip" title="100%">
                                         <div class="progress-bar w-100" role="progressbar" aria-valuenow="100"
                                             aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -105,7 +105,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="progress">
+                                    <div class="progress" data-bs-toggle="tooltip" title="75%">
                                         <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
                                             aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -122,7 +122,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="progress">
+                                    <div class="progress" data-bs-toggle="tooltip" title="75%">
                                         <div class="progress-bar w-75" role="progressbar" aria-valuenow="75"
                                             aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -139,7 +139,7 @@
                                     </div>
                                 </div>
                                 <div class="col">
-                                    <div class="progress">
+                                    <div class="progress" data-bs-toggle="tooltip" title="50%">
                                         <div class="progress-bar w-50" role="progressbar" aria-valuenow="40"
                                             aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
@@ -154,12 +154,92 @@
                 </div>
             </div>
 
-            <div class="row gy-4 mt-5">
+            <!-- Design -->
+            <div class="row gy-4 mt-4">
                 <div class="col-12 col-md-4">
                     <img src="./img/design.jpg" alt="écran montrant des designs" width="100%">
                 </div>
-                <div class="col-12 offset-md-1 col-md-7">
-                    <div class="bg-secondary h-100 w-100 py-5">
+                <div class="col-12 order-first offset-md-1 col-md-7 order-md-last">
+                    
+                    <!-- Progress bar -->
+                    <div class="mb-3 p-3 bg-white">
+                        <div class="row-align-items-center">
+                            <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                <div class="d-flex align-items-center">
+                                    <i class="fab-fa-figma fa-2x me-3 text-primary"></i>
+                                    <p class="fw-bold m-0">Figma</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="progress" data-bs-toggle="tooltip" title="75%">
+                                    <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="mb-3 p-3 bg-white">
+                        <div class="row-align-items-center">
+                            <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                <div class="d-flex align-items-center">
+                                    <i class="fab-fa-figma fa-2x me-3 text-primary"></i>
+                                <p class="fw-bold m-0">Suite Adobe</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="progress" data-bs-toggle="tooltip" title="100%">
+                                    <div class="progress-bar w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 p-3 bg-white">
+                        <div class="row-align-items-center">
+                            <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                <div class="d-flex align-items-center">
+                                    <i class="fab-fa-figma fa-2x me-3 text-primary"></i>
+                                <p class="fw-bold m-0">Design UI</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="progress" data-bs-toggle="tooltip" title="75%">
+                                    <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 p-3 bg-white">
+                        <div class="row-align-items-center">
+                            <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                <div class="d-flex align-items-center">
+                                    <i class="fab-fa-figma fa-2x me-3 text-primary"></i>
+                                <p class="fw-bold m-0">Design UX</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="progress" data-bs-toggle="tooltip" title="75%">
+                                    <div class="progress-bar w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="mb-3 p-3 bg-white">
+                        <div class="row-align-items-center">
+                            <div class="col-5 col-sm-4 col-lg-3 col-xl-2">
+                                <div class="d-flex align-items-center">
+                                    <i class="fab-fa-figma fa-2x me-3 text-primary"></i>
+                                <p class="fw-bold m-0">Vidéo</p>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="progress" data-bs-toggle="tooltip" title="50%">
+                                    <div class="progress-bar w-50" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -491,12 +571,12 @@
                 </div>
                 <div class="col-12 col-md-4 text-md-end">
                     <ul class="list-inline">
-                        <li class="list-inline-item"><a href="#" class="text-decoration-none text-dark">
+                        <li class="list-inline-item"><a href="#" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="Instagram">
                                 <i class="bi bi-instagram"></i>
                             </a></li>
-                        <li class="list-inline-item"><a href="#" class="text-decoration-none text-dark"><i
+                        <li class="list-inline-item"><a href="#" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="Linkedin"><i
                                     class="bi bi-linkedin"></i></a></li>
-                        <li class="list-inline-item"><a href="#" class="text-decoration-none text-dark"><i
+                        <li class="list-inline-item"><a href="#" class="text-decoration-none text-dark" data-bs-toggle="tooltip" title="Twitter"><i
                                     class="bi bi-twitter"></i></a></li>
                     </ul>
                 </div>
@@ -534,6 +614,13 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
             crossorigin="anonymous"></script>
+
+            <script>
+                var tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle=tooltip]'))
+                var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
+                    return new bootstrap.Tooltip(tooltipTriggerEl)
+                })
+            </script>
     </footer>
 </body>
 
